[package]
name = "trigraph"
version = "0.1.0"
edition = "2021"
license = "ISC"
authors = ["doinkythederp <doinkythederp@icloud.com>"]
description = "Finds C trigraph escapes in a string and replaces them with the correct character"
categories = ["parsing", "algorithms"]
keywords = ["trigraph", "escapes"]
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
